Se agrega pantalla para listar proformas de analista